Added fav icon.

--- a/client/main.html
+++ b/client/main.html
@@ -1,5 +1,7 @@
 <head>
 	<title>Todo List</title>
+
+	<link rel="icon" href="https://www.meteor.com/favicon.png" gtype="image/png" />
 </head>
 
 <body>
